package com;
public interface ElementoDocumento {
    void aceitar(Visitante v);
}