package com;
public interface Visitante {
    void visitarTexto(Texto t);
    void visitarImagem(Imagem i);
}